--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "clear": "npm run clean && rimraf node_modules",
     "prebuild": "npm run clean",
     "build": "webpack --mode production",
+    "postbuild": "npm run copy-resources && git add docs/*",
+    "copy-resources": "copy /E /C /I \"src/teams.json\" \"docs/teams.json\"",
+    "deploy": "npm run build && git commit -m \"[build] new docs\" && git push",
     "start": "webpack serve --open",
     "demo": "set PORT=8080 && serve docs"
   },
