--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "prebuild": "npm run clean",
     "build": "webpack --mode production",
     "postbuild": "npm run copy-resources && git add docs/*",
-    "copy-resources": "Xcopy /E /C /I \"src/teams.json\" \"docs/teams.json\"",
     "deploy": "npm run build && git commit -m \"[build] new docs\" && git push",
+    "copy-resources": "Xcopy /E /C /I \"src/data\" \"docs/data\"",
     "start": "webpack serve --open",
     "demo": "set PORT=8080 && serve docs"
   },
