--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "webpack --mode production",
     "postbuild": "npm run copy-resources && git add docs/*",
     "deploy": "npm run build && git commit -m \"[build] new docs\" && git push",
-    "copy-resources": "Xcopy /E /C /I \"src/data\" \"docs/data\"",
+    "copy-resources": "Xcopy /E /C /I \"src/teams.json\" \"docs/teams.json\"",
     "start": "webpack serve --open",
     "demo": "set PORT=8080 && serve docs"
   },
